# claudegrep

./: README.md  claudegrep  install.sh  pyproject.toml  test_claudegrep.py
examples/: README.md  generate_demo.py
